loading component added

--- a/src/language/eng/global.json
+++ b/src/language/eng/global.json
@@ -179,6 +179,9 @@
       "active": "Active",
       "noActive": "No Active"
     },
+    "limit": {
+      "all": "All"
+    },
     "showHideColumns": "show/hide columns",
     "columnOrder": "Column Order",
     "search": "search...",
